add type property to RecrodCreate types
